# OrangePi-Modules

./: README.md
01_LED/: CMakeLists.txt  main.cpp
02_KEY/: CMakeLists.txt  main.cpp
02_KEY/include/: key.h
02_KEY/src/: key.cpp
03_TIMER/: CMakeLists.txt  main.cpp
03_TIMER/include/: tim.h
03_TIMER/src/: tim.cpp
04_INTERRUPT/: CMakeLists.txt  main.cpp
04_INTERRUPT/include/: exti.h
04_INTERRUPT/src/: exti.cpp
05_I2S/: CmakeLists.txt  main.c
05_I2S/include/: audio.h
05_I2S/source/: audio.c
